frontend/src/App.module.scss
.main {
  margin: 0;
  padding: 2rem;
  font-family: "Press Start 2P", monospace;
  display: flex;
  flex-direction: column;
  background: rgb(241, 234, 237);
  color: rgb(71, 1, 126);
}

.container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 2rem;

  @media (min-width: 768px) {
    flex-direction: row-reverse;
  }
}

.sideBar {
  width: 100%;
  display: flex;
  flex-direction: column;
  gap: 2rem;

  @media (min-width: 768px) {
    width: 20%;
  }
}

.stats,
.bookContainer {
  border: 2px solid rgb(120, 2, 210);
  background: rgb(250, 225, 241);
  border-radius: 1rem;
  padding: 1rem;
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.statsTotal,
.statsGoal {
  margin: 0;
}

.progressWrapper {
  width: 100%;
  background-color: rgb(223, 195, 195);
  border-radius: 10px;
  height: 16px;
  margin-top: 0.5rem;
  overflow: hidden;
}

.progressBar {
  height: 100%;
  background-color: #e600f6;
  transition: width 0.3s ease;
}

.mainSection {
  width: 100%;

  @media (min-width: 768px) {
    width: 70%;
  }
}

.mainTitle {
  font-size: 56px;
  text-align: center;
}

.title {
  font-size: 24px;
  margin: 0;
}

.allBooks {
  font-size: 24px;
  margin: 0;
  margin: 2rem 0 1rem 0;
}

.top-title {
  margin: 0;
  font-size: 24px;
}

.selector {
  border-radius: 1rem;
  padding: .25rem;
  margin: .25rem;
  background-color: rgb(250, 225, 241);
  color: rgb(120, 2, 210);
  border: 2px solid rgb(120, 2, 210);
  transition: background-color 0.3s ease;
  font-family: "Press Start 2P", monospace;
  font-weight: 600;

  &:hover {
    background-color: rgb(120, 2, 210);
    color: rgb(250, 225, 241);
    border: 2px solid rgb(255, 3, 163);
  }

  &:focus, &:focus-visible {
    border: 2px solid rgb(255, 3, 163);
  }
}

.filter {
  padding-top: 2rem;
}

.books-container,
.pinnedSection {
  display: flex;
  gap: 1rem;
  flex-wrap: wrap;
  justify-content: space-between;
  width: 100%;
}

